--- a/about.html
+++ b/about.html
@@ -12,7 +12,6 @@
     <!-- estilos css  -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="estilos.css">
-    <link rel="stylesheet" href="./node_modules/bootstrap-icons/font/bootstrap-icons.css">
 </head>
 <!--body -->
 <body >
@@ -42,49 +41,16 @@
 <div class="container">
   <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
-      <li class="breadcrumb-item active " ><a href="./index.html">Home</a></li>
-        <li class="breadcrumb-item  " aria-current="page">contacto</li>
+      <li class="breadcrumb-item  " ><a href="./index.html">Home</a></li>
+        <li class="breadcrumb-item " aria-current="page">nosotros</li>
       </ol>
-    </nav>
-  
-  <h1 style="text-align:center;">
-    dejame tu comentario 
-  </h1>
-  <form>
-    <div class="row">
-      <div class="form-group ">
-        <label for="name">Nombre completo: </label>
-        <input type="text" class="form-control" id="nombre"placeholder="Ingrese su nombre" >
-      </div>
-      <div class="form-group ">
-        <label for="tel">Numero de contacto: </label>
-        <input type="tel" class="form-control" id="tel"placeholder="Ingrese su  numero de contacto" >
-      </div>
-    </div>
-    <div class="form-group">
-      <label for="email">Correo electronico: </label>
-      <input type="email" class="form-control" id="email"placeholder="Ingrese su email" >
-    </div>
-    <div class="form-group">
-      <label for="comentario">Comentario:</label>
-      <textarea id="comentario" class="form-control" ></textarea>
-    </div>
-    <div class="form-check">
-      <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-      <label class="form-check-label" for="flexCheckDefault">
-        Quiero que me contacten
-      </label>
-    </div>
     
-    <button type="submit" class=" btn btn-outline-primary" > Enviar </button>
-  
-  </form>
-
-
-
-
-
-
+  </nav>
+  <span>
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+     Nisi, ex? Iusto suscipit harum, rem sint laborum quisquam officiis ut.
+      Suscipit qui animi omnis facilis! Quidem et laboriosam pariatur commodi iste!
+  </span>
 </div>
 <!-- inicio section-->
 <section>
