--- a/productos.html
+++ b/productos.html
@@ -42,45 +42,60 @@
 <div class="container">
   <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
-      <li class="breadcrumb-item active " ><a href="./index.html">Home</a></li>
-        <li class="breadcrumb-item  " aria-current="page">contacto</li>
-      </ol>
-    </nav>
+      <li class="breadcrumb-item  " ><a href="./index.html">Home</a></li>
+        <li class="breadcrumb-item " aria-current="page">productos</li>
+      </ol>  
+  </nav>
   
-  <h1 style="text-align:center;">
-    dejame tu comentario 
-  </h1>
-  <form>
-    <div class="row">
-      <div class="form-group ">
-        <label for="name">Nombre completo: </label>
-        <input type="text" class="form-control" id="nombre"placeholder="Ingrese su nombre" >
-      </div>
-      <div class="form-group ">
-        <label for="tel">Numero de contacto: </label>
-        <input type="tel" class="form-control" id="tel"placeholder="Ingrese su  numero de contacto" >
-      </div>
-    </div>
-    <div class="form-group">
-      <label for="email">Correo electronico: </label>
-      <input type="email" class="form-control" id="email"placeholder="Ingrese su email" >
-    </div>
-    <div class="form-group">
-      <label for="comentario">Comentario:</label>
-      <textarea id="comentario" class="form-control" ></textarea>
-    </div>
-    <div class="form-check">
-      <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-      <label class="form-check-label" for="flexCheckDefault">
-        Quiero que me contacten
-      </label>
-    </div>
-    
-    <button type="submit" class=" btn btn-outline-primary" > Enviar </button>
+  <div class="table-responsive">
+  <table class="table table-striped">
+    <thead class="table-dark">
+      <th>calidad</th>
+      <th>calidad 1</th>
+      <th>calidad 2</th>
+      <th>calidad 3</th>
+      <th>calidad 4</th>
+    </thead>
+    <tbody>
+      <tr>
+        <td><i class="bi bi-star"></i></td>
+        <td> $100</td>
+        <td>$120</td>
+        <td>$ 140 </td>
+        <td> $ 160 </td>
+      </tr>
+      <tr>
+        <td><i class="bi bi-star"></i><i class="bi bi-star"></i></td>
+        <td> $100</td>
+        <td>$120</td>
+        <td>$ 140 </td>
+        <td> $ 160 </td>
+      </tr>
+      <tr>
+        <td><i class="bi bi-star"></i><i class="bi bi-star"></i><i class="bi bi-star"></i></td>
+        <td> $100</td>
+        <td>$120</td>
+        <td>$ 140 </td>
+        <td> $ 160 </td>
+      </tr>
+      <tr>
+        <td><i class="bi bi-star"></i><i class="bi bi-star"></i><i class="bi bi-star"></i><i class="bi bi-star"></i></td>
+        <td> $100</td>
+        <td>$120</td>
+        <td>$ 140 </td>
+        <td> $ 160 </td>
+      </tr>
+      <tr>
+        <td><i class="bi bi-star"></i><i class="bi bi-star"></i><i class="bi bi-star"></i><i class="bi bi-star"></i><i class="bi bi-star"></i></td>
+        <td> $100</td>
+        <td>$120</td>
+        <td>$ 140 </td>
+        <td> $ 160 </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
   
-  </form>
-
-
 
 
 
