--- a/index.html
+++ b/index.html
@@ -66,52 +66,71 @@
     </div>
   </div>
   <hr>
+  <img src="./images/social-media-mobile-icons-snapchat-facebook-instagram-ss-1920.jpg" class="img-fluid" alt="responisve img">
     <div class="d-flex flex-wrap flex-row-reverse ">
-      <div class=" card d-flex flex-column justify-content-between">
-        <div>
-        <h4>pagina web </h4>
-        <p>perfecto para mostrar informacion de tu empresa  </p>
+      <div class=" card cardb d-flex flex-column justify-content-between ms-2">
+        <div class="card-body">
+        <h4 class="card-title">pagina web </h4>
+        <img class="card-img-top" src="./images/7beb7869225b330a7725571e16f85690.jpg" alt="img uno">
+        <p class="card-text">perfecto para mostrar informacion de tu empresa  </p>
       </div>
       <div>
         <button class="btn btn-success btn-dos"> Lo quiero!<i class="bi bi-plus-lg"></i>  </button>
       </div>
       </div>
-      <div class=" card d-flex flex-column justify-content-between">
-        <div>
-        <h4>pagina web </h4>
-        <p>perfecto para mostrar informacion de tu empresa  </p>
+      <div class="card cardb d-flex flex-column justify-content-between ms-2">
+        <div class="card-body">
+        <h4 class="card-title">pagina web </h4>
+        <p class="card-text">perfecto para mostrar informacion de tu empresa  </p>
       </div>
       <div>
-        <button class="btn btn-success btn-dos">Lo quiero!</button>
+        <button class="btn btn-success btn-dos"> Lo quiero!<i class="bi bi-plus-lg"></i>  </button>
       </div>
       </div>
-      <div class=" card d-flex flex-column justify-content-between">
-        <div>
-        <h4>e-commerce </h4>
-        <p>perfecto para mostrar informacion de tu empresa 
-          perfecto para mostrar informacion de tu empresa  
-          perfecto para mostrar informacion de tu empresa   </p>
-      </div>
-      <div>
-        <button class="btn btn-success btn-dos">Lo quiero!</button>
-      </div>
-      </div>
-      <div class=" card d-flex flex-column justify-content-between">
-        <div>
-        <h4>pagina web </h4>
-        <p>perfecto para mostrar informacion de tu empresa  </p>
+     
+      <div class=" card cardb d-flex flex-column justify-content-between ms-2">
+        <div class="card-body">
+        <h4 class="card-title">pagina web </h4>
+        <p class="card-text">perfecto para mostrar informacion de tu empresa  </p>
       </div>
       <div>
-        <button class="btn btn-success btn-dos">Lo quiero!</button>
+        <button class="btn btn-success btn-dos"> Lo quiero!<i class="bi bi-plus-lg"></i>  </button>
       </div>
       </div>
-      <div class=" card d-flex flex-column justify-content-between">
-        <div>
-        <h4>pagina web </h4>
-        <p>perfecto para mostrar informacion de tu empresa  </p>
+      <div class="card  cardb d-flex flex-column justify-content-between ms-2">
+        <div class="card-body">
+        <h4 class="card-title">pagina web </h4>
+        <p class="card-text">perfecto para mostrar informacion de tu empresa  </p>
       </div>
       <div>
-        <button class="btn btn-success btn-dos">Lo quiero!</button>
+        <button class="btn btn-success btn-dos"> Lo quiero!<i class="bi bi-plus-lg"></i>  </button>
+      </div>
+      </div>
+      <div class="  card cardb d-flex flex-column justify-content-between ms-2">
+        <div class="card-body">
+        <h4 class="card-title">pagina web </h4>
+        <p class="card-text">perfecto para mostrar informacion de tu empresa  </p>
+      </div>
+      <div>
+        <button class="btn btn-success btn-dos"> Lo quiero!<i class="bi bi-plus-lg"></i>  </button>
+      </div>
+      </div>
+      <div class="  card cardb d-flex flex-column justify-content-between ms-2">
+        <div class="card-body">
+        <h4 class="card-title">pagina web </h4>
+        <p class="card-text">perfecto para mostrar informacion de tu empresa  </p>
+      </div>
+      <div>
+        <button class="btn btn-success btn-dos"> Lo quiero!<i class="bi bi-plus-lg"></i>  </button>
+      </div>
+      </div>
+      <div class=" card cardb d-flex flex-column justify-content-between ms-2">
+        <div class="card-body">
+        <h4 class="card-title">pagina web </h4>
+        <p class="card-text">perfecto para mostrar informacion de tu empresa  </p>
+      </div>
+      <div>
+        <button class="btn btn-success btn-dos"> Lo quiero!<i class="bi bi-plus-lg"></i>  </button>
       </div>
       </div>
       
@@ -131,9 +150,9 @@
   <div class="row">
     <div class="col-sm-4 d-flex flex-column">
       <a href="https://www.facebook.com/"><i class="bi bi-facebook"></i> @publicidadnix </a>
-      <a href="https://www.twitter.com/"><i class="bi bi-twitter"></i> </a>
-      <a href="https://www.instagram.com/"><i class="bi bi-instagram"></i> </a>
-      <a href="https://www.google.com/"><i class="bi bi-google"></i></a>
+      <a href="https://www.twitter.com/"><i class="bi bi-twitter"></i>@publicidadnix  </a>
+      <a href="https://www.instagram.com/"><i class="bi bi-instagram"></i> @publicidadnix </a>
+      <a href="https://www.google.com/"><i class="bi bi-google"></i>@publicidadnix </a>
     </div>
     <div class="col-sm-4 d-flex flex-column">
       <address>
