--- a/productos.html
+++ b/productos.html
@@ -95,8 +95,18 @@
     </tbody>
   </table>
 </div>
-  
 
+<div class=" d-flex justify-content-center ">
+  <div class="card" style="width: 18rem;">
+    <div class="card-header" style="background-color:blue; color:white">tarjetas aceptadas</div>
+    <ul class="list-group list-group-flush">
+      <li class="list-group-item">mastercard</li>
+      <li class="list-group-item">visa</li>
+      <li class="list-group-item">American express</li>
+    </ul>
+  </div>
+  </div>
+</div>
 
 
 
