--- a/contacto.html
+++ b/contacto.html
@@ -10,9 +10,11 @@
     <meta name="author" content="Nixon Armando Piñeres gomez">
     <title>tu pagina web </title>
     <!-- estilos css  -->
+    <!-- build:css dist/contacto.css -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="./node_modules/bootstrap-icons/font/bootstrap-icons.css">
+    <!-- endbuild -->
 </head>
 <!--body -->
 <body >
@@ -99,17 +101,17 @@
 <footer>
   <div class="row">
     <div class="col-sm-4 d-flex flex-column">
-      <a href="https://www.facebook.com/"> facebook</a>
-      <a href="https://www.facebook.com/"> twitter</a>
-      <a href="https://www.facebook.com/"> instagram</a>
-      <a href="https://www.facebook.com/"> facebook</a>
+      <a href="https://www.facebook.com/"><i class="bi bi-facebook"></i> @publicidadnix </a>
+      <a href="https://www.twitter.com/"><i class="bi bi-twitter"></i>@publicidadnix  </a>
+      <a href="https://www.instagram.com/"><i class="bi bi-instagram"></i> @publicidadnix </a>
+      <a href="https://www.google.com/"><i class="bi bi-google"></i>@publicidadnix </a>
     </div>
     <div class="col-sm-4 d-flex flex-column">
       <address>
         Oficina central <br>
-        av cra 70 # 65 a 64  - Bogota, Colombia.<br>
-         +57 3229143215<br>
-         nixonarmando8@gmail.com
+        <i class="bi bi-house"></i> cra 121 n 73 14 - Bogota, Colombia.<br>
+        <i class="bi bi-whatsapp"></i> +57 3229143215<br>
+        <i class="bi bi-mailbox"></i> nixonarmando8@gmail.com
     </address>
     </div>
     <div class="col-sm-4 d-flex flex-column align-items-end">
@@ -119,13 +121,14 @@
       <a href="https://www.facebook.com/"> contacto</a>
     </div>
 </div>
-
 </footer>
  <!-- fin footer-->
 <!-- estos son los script  -->
+<!-- build:js dist/contacto.js -->
 <script src="/node_modules/popper.js/dist/popper.min.js"></script>
 <script src="/node_modules/jquery/dist/jquery.min.js"></script>
 <script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="hola.js"></script>
+<!-- endbuild -->
 </body>
 </html>
