--- a/productos.html
+++ b/productos.html
@@ -10,9 +10,11 @@
     <meta name="author" content="Nixon Armando Piñeres gomez">
     <title>tu pagina web </title>
     <!-- estilos css  -->
+    <!-- build:css dist/productos.css -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="./node_modules/bootstrap-icons/font/bootstrap-icons.css">
+    <!-- endbuild -->
 </head>
 <!--body -->
 <body >
@@ -46,7 +48,27 @@
         <li class="breadcrumb-item " aria-current="page">productos</li>
       </ol>  
   </nav>
+  <ul class="nav nav-tabs" id="myTab" role="tablist">
+    <li class="nav-item">
+      <a class="nav-link active" id="compara-tab" data-bs-toggle="tab"  href="#compara" role="tab" aria-controls="compara" aria-selected="true"  >compara</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link " id="tarjetas-tab" data-bs-toggle="tab"  href="#tarjetas" role="tab" aria-controls="tarjetas" aria-selected="false"  >tarjetas</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link " id="comentarios-tab" data-bs-toggle="tab"  href="#comentarios" role="tab" aria-controls="comentarios" aria-selected="false"  >comentarios</a>
+    </li>
   
+  </ul>
+  
+
+  <div class="tab-content" id="myTabcontent">
+
+
+
+
+
+    <div class="tab-pane fade show active"  id="compara" role="tabpanel" aria-labelledby="compara-tab">
   <div class="table-responsive">
   <table class="table table-striped">
     <thead class="table-dark">
@@ -95,20 +117,73 @@
     </tbody>
   </table>
 </div>
-
-<div class=" d-flex justify-content-center ">
-  <div class="card" style="width: 18rem;">
-    <div class="card-header" style="background-color:blue; color:white">tarjetas aceptadas</div>
-    <ul class="list-group list-group-flush">
-      <li class="list-group-item">mastercard</li>
-      <li class="list-group-item">visa</li>
-      <li class="list-group-item">American express</li>
-    </ul>
-  </div>
-  </div>
 </div>
 
 
+
+
+
+
+<div class="tab-pane fade show "  id="tarjetas" role="tabpanel" aria-labelledby="tarjetas-tab">
+  <div class="accordion" id="accordiontarjetas">
+    <div class="card">
+      <div class="card-header" id="headingOne">
+        <h5 class="mb-0">
+          <button class="btn btn-link" type="button" data-bs-toggle="collapse" data-bs-target="#collapsebasica" aria-expanded="true" aria-controls="collapsebasica">
+            tarjeta basica
+          </button>
+        </h5>
+      </div>
+      <div id="collapsebasica" class=" collapse" aria-labelledby="headingOne" data-bs-parent="#accordiontarjetas">
+        <div class="card-body">
+            podes reservar en 3 cuotas sin intereses  
+        </div>
+      </div>
+    </div>
+    <div class="card">
+      <div class="card-header " id="headingTwo">
+        <h5 class="mb-0">
+          <button class="btn btn-link" type="button" data-bs-toggle="collapse" data-bs-target="#collapsevip" aria-expanded="false" aria-controls="collapsevip">
+            tarjeta vip
+          </button>
+        </h5>
+      </div>
+      <div id="collapsevip" class=" collapse" aria-labelledby="headingTwo" data-bs-parent="#accordiontarjetas">
+        <div class="card-body">
+            podes reservar en 6 cuotas sin intereses   mas bebida
+        </div>
+      </div>
+    </div>
+    <div class="card">
+      <div class="card-header" id="headingTree">
+        <h5 class="mb-0">
+          <button class="btn btn-link" type="button" data-bs-toggle="collapse" data-bs-target="#collapseblack" aria-expanded="false" aria-controls="collapseblack">
+            tarjeta black
+          </button>
+        </h5>
+      </div>
+      <div id="collapseblack" class=" collapse" aria-labelledby="headingTree" data-bs-parent="#accordiontarjetas">
+        <div class="card-body">
+            podes reservar en 12 cuotas sin intereses  mas regalo
+        </div>
+      </div>
+    </div>
+</div>
+
+
+
+
+</div>
+  
+
+
+  <div class="tab-pane fade show "  id="comentarios" role="tabpanel" aria-labelledby="comentarios-tab">comentarios
+
+  </div>
+
+
+
+</div>
 
 </div>
 <!-- inicio section-->
@@ -124,17 +199,17 @@
 <footer>
   <div class="row">
     <div class="col-sm-4 d-flex flex-column">
-      <a href="https://www.facebook.com/"> facebook</a>
-      <a href="https://www.facebook.com/"> twitter</a>
-      <a href="https://www.facebook.com/"> instagram</a>
-      <a href="https://www.facebook.com/"> facebook</a>
+      <a href="https://www.facebook.com/"><i class="bi bi-facebook"></i> @publicidadnix </a>
+      <a href="https://www.twitter.com/"><i class="bi bi-twitter"></i>@publicidadnix  </a>
+      <a href="https://www.instagram.com/"><i class="bi bi-instagram"></i> @publicidadnix </a>
+      <a href="https://www.google.com/"><i class="bi bi-google"></i>@publicidadnix </a>
     </div>
     <div class="col-sm-4 d-flex flex-column">
       <address>
         Oficina central <br>
-        av cra 70 # 65 a 64  - Bogota, Colombia.<br>
-         +57 3229143215<br>
-         nixonarmando8@gmail.com
+        <i class="bi bi-house"></i> cra 121 n 73 14 - Bogota, Colombia.<br>
+        <i class="bi bi-whatsapp"></i> +57 3229143215<br>
+        <i class="bi bi-mailbox"></i> nixonarmando8@gmail.com
     </address>
     </div>
     <div class="col-sm-4 d-flex flex-column align-items-end">
@@ -144,13 +219,14 @@
       <a href="https://www.facebook.com/"> contacto</a>
     </div>
 </div>
-
 </footer>
  <!-- fin footer-->
 <!-- estos son los script  -->
+<!-- build:js dist/productos.js -->
 <script src="/node_modules/popper.js/dist/popper.min.js"></script>
 <script src="/node_modules/jquery/dist/jquery.min.js"></script>
 <script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="hola.js"></script>
+<!-- endbuild -->
 </body>
 </html>
