--- a/productos.html
+++ b/productos.html
@@ -223,10 +223,9 @@
  <!-- fin footer-->
 <!-- estos son los script  -->
 <!-- build:js dist/productos.js -->
-<script src="/node_modules/popper.js/dist/popper.min.js"></script>
 <script src="/node_modules/jquery/dist/jquery.min.js"></script>
-<script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-<script src="hola.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<script src="hola.js"></script> 
 <!-- endbuild -->
 </body>
 </html>
